# imdeg

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
scripts/: canonical_quick_start.py  quick_start.py  visu_single_deg_test.py
src/imdeg/: __init__.py  apply.py  calibration.py  metrics.py  registry.py  severity.py  taxonomy.py
src/imdeg/backends/: arniqa.py  hendrycks.py  hendrycks_adapter.py
src/imdeg/backends/Liu_IJCV_2024/: Liu_IJCV_2024_adapted.py  Liu_IJCV_2024_wrapper.py
src/imdeg/compose/: compose.py
src/imdeg/config/: papers.py
src/imdeg/core/: severity_export.py
src/imdeg/utils/: __init__.py  calibration_plot.py  image_conversion.py  image_io.py
